package edu.itba.class1.exchange;

public record Conversion(MoneyAmount converted, CurrencyRate rateUsed) {

}
