@startuml
title Currency Converter - Dominio, puertos y detalles

left to right direction
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam shadowing false

skinparam package<<Domain>> {
    BorderStyle dashed
    BorderThickness 2
    BorderColor #333333
}

legend right
  ..|>  Implementa una interfaz
  <|--  Hereda de
  -->   Dependencia directa
  ..>   Uso o creacion
endlegend

package "DOMINIO  (model + service)" <<Domain>> {

    class MoneyAmount <<value object>> {
        currency: Currency
        amount: BigDecimal
        +convertWithRate(rate: CurrencyRate): MoneyAmount
        +add(other: MoneyAmount): MoneyAmount
    }

    class CurrencyRate <<value object>> {
        fromCurrency: Currency
        toCurrency: Currency
        rate: BigDecimal
        timestamp: Instant
    }

    class Conversion <<value object>> {
        converted: MoneyAmount
        rateUsed: CurrencyRate
    }

    class CurrencyConverter {
        -currencyRateProvider: CurrencyRateProvider
        +convert(moneyAmount: MoneyAmount, to: Currency): Conversion
        +convertMultiple(moneyAmount: MoneyAmount, to: Collection): Collection
    }

    class HistoricalCurrencyConverter {
        -historicalCurrencyRateProvider: HistoricalCurrencyRateProvider
        +convert(moneyAmount: MoneyAmount, to: Currency, date: LocalDate): Conversion
        +convertMultiple(moneyAmount: MoneyAmount, to: Collection, date: LocalDate): Collection
    }

    interface CurrencyRateProvider <<puerto>> {
        +getCurrencyRate(from: Currency, to: Currency): CurrencyRate
        +getMultipleCurrencyRates(from: Currency, to: Collection): Collection
    }

    interface HistoricalCurrencyRateProvider <<puerto>> {
        +getHistoricalCurrencyRate(from, to, date: LocalDate): CurrencyRate
        +getHistoricalMultipleCurrencyRates(from, to, date: LocalDate): Collection
    }

    interface CurrencyCatalog <<puerto>> {
        +getAvailableCurrencies(): Collection
    }

    class RateNotAvailableException <<domain exception>>
}

package "ADAPTADOR  (client.currencyapi.freecurrencyapi)" {
    class FreeCurrencyApiClient {
        -httpClient: HttpClient
        -jsonParser: JsonParser
        -responseStatusChecker: ResponseStatusChecker
        -responseMapper: FreeCurrencyResponseMapper
        -apiKey: String
        +{static} defaultStatusChecker(): ResponseStatusChecker
    }

    class FreeCurrencyResponseMapper <<anti-corruption layer>> {
        +toRates(from, to, response): Collection<CurrencyRate>
        +toHistoricalRates(from, to, date, response): Collection<CurrencyRate>
        +toCurrencies(response): Collection<Currency>
    }
}

package "DTOs DE LA API  (...freecurrencyapi.response)" {
    class ExchangeRateResponse <<DTO>>
    class HistoricalExchangeRateResponse <<DTO>>
    class AvailableCurrenciesResponse <<DTO>>
}

package "ERRORES DE INTEGRACION  (client.error)" {
    class CurrencyProviderException <<integration exception>> {
        -statusCode: int
        -responseBody: String
    }
    class AuthenticationFailedException
    class CurrencyProviderRateLimitException
    class CurrencyProviderResourceNotFoundException
    class InvalidProviderRequestException
    class InvalidProviderResponseException
}

package "HTTP  (http)" {
    interface HttpClient {
        +get(url: URI, queryParams: Map, headers: Map): HttpResponse
    }
    class UnirestHttpClient
    class HttpResponse {
        body: String
        statusCode: int
        +isSuccessful(): boolean
    }
    enum HttpStatus {
        OK, UNAUTHORIZED, FORBIDDEN
        NOT_FOUND, UNPROCESSABLE_CONTENT
        TOO_MANY_REQUESTS
    }
    class ResponseStatusChecker {
        -errors: Map<Integer, Function>
        -defaultError: Function
        +check(response: HttpResponse): void
    }
    class HttpTransportException <<infrastructure exception>>
}

package "PARSER  (parser)" {
    interface JsonParser {
        +parse(json: String, type: Class): Object
    }
    class GsonJsonParser
    class JsonParseException <<parser exception>>
}

package "LIBRERIAS EXTERNAS" {
    class Gson <<external>>
    class Unirest <<external>>
}

package "COMPOSICION" {
    class Main
}

CurrencyConverter --> CurrencyRateProvider : depende de la abstraccion
HistoricalCurrencyConverter --> HistoricalCurrencyRateProvider : depende de la abstraccion
CurrencyConverter --> Conversion
HistoricalCurrencyConverter --> Conversion
Conversion --> MoneyAmount
Conversion --> CurrencyRate
MoneyAmount ..> CurrencyRate : convertWithRate

FreeCurrencyApiClient ..|> CurrencyRateProvider
FreeCurrencyApiClient ..|> HistoricalCurrencyRateProvider
FreeCurrencyApiClient ..|> CurrencyCatalog
FreeCurrencyApiClient --> HttpClient : depende de la abstraccion
FreeCurrencyApiClient --> JsonParser : depende de la abstraccion
FreeCurrencyApiClient --> ResponseStatusChecker
FreeCurrencyApiClient --> FreeCurrencyResponseMapper
FreeCurrencyApiClient --> ExchangeRateResponse
FreeCurrencyApiClient --> HistoricalExchangeRateResponse
FreeCurrencyApiClient --> AvailableCurrenciesResponse
FreeCurrencyApiClient ..> InvalidProviderResponseException : envuelve fallas de parseo

FreeCurrencyResponseMapper --> ExchangeRateResponse : traduce DTO a dominio
FreeCurrencyResponseMapper --> HistoricalExchangeRateResponse
FreeCurrencyResponseMapper --> AvailableCurrenciesResponse
FreeCurrencyResponseMapper --> CurrencyRate : produce
FreeCurrencyResponseMapper ..> RateNotAvailableException : crea ante tasa ausente

CurrencyProviderException <|-- AuthenticationFailedException
CurrencyProviderException <|-- CurrencyProviderRateLimitException
CurrencyProviderException <|-- CurrencyProviderResourceNotFoundException
CurrencyProviderException <|-- InvalidProviderRequestException
CurrencyProviderException <|-- InvalidProviderResponseException
CurrencyProviderException --> HttpResponse : conserva status y body

ResponseStatusChecker --> HttpResponse
ResponseStatusChecker --> HttpStatus
ResponseStatusChecker ..> CurrencyProviderException : crea segun status

UnirestHttpClient ..|> HttpClient
UnirestHttpClient ..> HttpTransportException : lanza ante falla de transporte
UnirestHttpClient --> Unirest

GsonJsonParser ..|> JsonParser
GsonJsonParser ..> JsonParseException : crea ante JSON invalido
GsonJsonParser --> Gson

Main --> CurrencyConverter
Main --> HistoricalCurrencyConverter
Main --> FreeCurrencyApiClient
Main --> UnirestHttpClient
Main --> GsonJsonParser

note bottom of CurrencyConverter
  Inversion de dependencias: el dominio depende de los puertos,
  nunca de FreeCurrencyApiClient, Unirest ni Gson.
end note

note bottom of FreeCurrencyResponseMapper
  Unico punto donde el modelo de FreeCurrencyAPI se traduce
  al dominio. Los DTOs no cruzan hacia service/ ni model/.
end note

note bottom of Main
  Dependencias concretas intencionales: es el composition root
  y el unico lugar que resuelve la API key.
end note

note right of ResponseStatusChecker
  Map de status a factories de excepcion.
  Agregar un status es una entrada mas, sin editar el metodo.
end note

note as N1
  Las tres jerarquias de excepcion no comparten raiz:
  CurrencyProviderException, HttpTransportException
  y RateNotAvailableException extienden RuntimeException
  por separado, y Main captura las tres.
end note

N1 .. CurrencyProviderException
N1 .. HttpTransportException
N1 .. RateNotAvailableException

@enduml
